--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
     "file-saver": "^2.0.5",
+    "js-md5": "^0.7.3",
     "jszip": "^3.6.0",
+    "moment": "^2.29.1",
     "qrcodejs2": "0.0.2",
     "qs": "^6.9.6",
     "spark-md5": "^3.0.1",
     "vue": "^2.6.11",
+    "vue-json-views": "^1.3.0",
+    "vue-monoplasty-slide-verify": "^1.1.3",
     "vue-router": "^3.2.0",
     "vue-simple-uploader": "^0.7.6",
     "vuex": "^3.4.0"
